# KMeansParallel

./: CMakeLists.txt  Cluster.cpp  Cluster.h  Point.cpp  Point.h  SequentialKMeans.cpp  SequentialKMeans.h  main.cu
